--- a/conf/layer.conf
+++ b/conf/layer.conf
@@ -27,6 +27,8 @@ NON_MULTILIB_RECIPES_append = " u-boot rpi-bootfiles rpi-config rpi-cmdline"
 
 LICENSE_PATH += "${LAYERDIR}/files/custom-licenses"
 
+LAYERRECOMMENDS_wr-bcm-2xxx-rpi  = "bcm-2xxx-rpi-dl"
+
 BBFILES_DYNAMIC += " \
     xfce-layer:${LAYERDIR}/dynamic-layers/meta-xfce/recipes-*/*/*.bbappend \
 "
