--- a/conf/machine/bcm-2xxx-rpi4.conf
+++ b/conf/machine/bcm-2xxx-rpi4.conf
@@ -47,4 +47,4 @@ OSTREE_UBOOT_CMD ?= "booti"
 DEFAULT_DTB ?= ""
 OSTREE_COPY_IMAGE_BOOT_FILES = "1"
 OSTREE_NETINST_DEV ?= "/dev/mmcblk0,/dev/sda,/dev/vda"
-OSTREE_NETINST_ARGS ?= "${OSTREE_CONSOLE} bl=ufsd rdinit=/install instdev=${OSTREE_NETINST_DEV} instname=wrlinux instbr=\$BRANCH insturl=\$URL instab=${OSTREE_USE_AB} instsf=1 instdate=BUILD_DATE"
+OSTREE_NETINST_ARGS ?= "${OSTREE_CONSOLE} bl=ufsd rdinit=/install instdev=${OSTREE_NETINST_DEV} instname=${OSTREE_OSNAME} instbr=\$BRANCH insturl=\$URL instab=${OSTREE_USE_AB} instsf=1 instdate=BUILD_DATE"
