bcm-2xxx-rpi: convert to use new override syntax
Issue: LINUXEXEC-15544

convert to use ":" as the override instead of "_".
And update LAYERSERIES_COMPAT to "honister".

Signed-off-by: Liwei Song <liwei.song@windriver.com>

--- a/conf/layer.conf
+++ b/conf/layer.conf
@@ -21,9 +21,9 @@ LAYERVERSION_wr-bcm-2xxx-rpi = "1"
 
 LAYERDEPENDS_wr-bcm-2xxx-rpi = "core wrlinux raspberrypi"
 
-LAYERSERIES_COMPAT_wr-bcm-2xxx-rpi = "wrl hardknott"
+LAYERSERIES_COMPAT_wr-bcm-2xxx-rpi = "wrl honister"
 
-NON_MULTILIB_RECIPES_append = " u-boot rpi-bootfiles rpi-config rpi-cmdline"
+NON_MULTILIB_RECIPES:append = " u-boot rpi-bootfiles rpi-config rpi-cmdline"
 
 LICENSE_PATH += "${LAYERDIR}/files/custom-licenses"
 
