--- a/conf/machine/bcm-2xxx-rpi4.conf
+++ b/conf/machine/bcm-2xxx-rpi4.conf
@@ -4,9 +4,9 @@
 
 require bcm-2xxx-rpi.inc
 require rpi-graphics.inc
-EXTRA_IMAGECMD_jffs2 = "--pad --no-cleanmarkers --eraseblock=128"
+EXTRA_IMAGECMD:jffs2 = "--pad --no-cleanmarkers --eraseblock=128"
  
-DISTRO_FEATURES_append = " wifi bluetooth"
+DISTRO_FEATURES:append = " wifi bluetooth"
 
 MACHINEOVERRIDES .= ":raspberrypi4"
 
@@ -24,10 +24,10 @@ IMAGE_BOOT_FILES ?= "bcm2835-bootfiles/*\
 		     u-boot.bin;${SDIMG_KERNELIMAGE} boot.scr\
 "
 INITRAMFS_IMAGE ??= ""
-IMAGE_BOOT_FILES_append = " ${@bb.utils.contains('DISTRO_FEATURES', 'ostree', '${INITRAMFS_IMAGE}-${MACHINE}.${INITRAMFS_FSTYPES};initramfs', '', d)}"
+IMAGE_BOOT_FILES:append = " ${@bb.utils.contains('DISTRO_FEATURES', 'ostree', '${INITRAMFS_IMAGE}-${MACHINE}.${INITRAMFS_FSTYPES};initramfs', '', d)}"
 
-NON_MULTILIB_RECIPES_append = " boot-config"
-NON_MULTILIB_RECIPES_append = " rpi-u-boot-scr"
+NON_MULTILIB_RECIPES:append = " boot-config"
+NON_MULTILIB_RECIPES:append = " rpi-u-boot-scr"
 
 BOOTFILES_DIR_NAME ?= "bcm2835-bootfiles"
 
