--- a/templates/default/bsp-pkgs.conf
+++ b/templates/default/bsp-pkgs.conf
@@ -1,13 +1,13 @@
-PNWHITELIST_openembedded-layer += 'hostapd'
-PNWHITELIST_networking-layer += 'crda'
-PNWHITELIST_meta-python += 'python3-m2crypto'
-PNWHITELIST_raspberrypi += 'rpi-u-boot-scr'
-PNWHITELIST_wr-bcm-2xxx-rpi += 'bcm2835-bootfiles'
-PNWHITELIST_raspberrypi += 'rpi-cmdline'
-PNWHITELIST_raspberrypi += 'rpi-config'
-PNWHITELIST_raspberrypi += 'rpi-bootfiles'
-PNWHITELIST_raspberrypi += 'pi-bluetooth'
-PNWHITELIST_raspberrypi += 'udev-rules-rpi'
+PNWHITELIST:openembedded-layer += 'hostapd'
+PNWHITELIST:networking-layer += 'crda'
+PNWHITELIST:meta-python += 'python3-m2crypto'
+PNWHITELIST:raspberrypi += 'rpi-u-boot-scr'
+PNWHITELIST:wr-bcm-2xxx-rpi += 'bcm2835-bootfiles'
+PNWHITELIST:raspberrypi += 'rpi-cmdline'
+PNWHITELIST:raspberrypi += 'rpi-config'
+PNWHITELIST:raspberrypi += 'rpi-bootfiles'
+PNWHITELIST:raspberrypi += 'pi-bluetooth'
+PNWHITELIST:raspberrypi += 'udev-rules-rpi'
 
 EXTRA_KERNEL_FILES =. "${LAYER_PATH_wr-bcm-2xxx-rpi}/templates/default/bcmgenet:"
 EXTRA_KERNEL_SRC_URI += "file://bcmgenet.cfg"
