bcm-2xxx-rpi/: Convert to use WRL_RECIPES
Issue: LINUXEXEC-18240

Signed-off-by: Saul Wold <saul.wold@windriver.com>

--- a/templates/default/bsp-pkgs.conf
+++ b/templates/default/bsp-pkgs.conf
@@ -1,13 +1,13 @@
-PNWHITELIST:openembedded-layer += 'hostapd'
-PNWHITELIST:networking-layer += 'crda'
-PNWHITELIST:meta-python += 'python3-m2crypto'
-PNWHITELIST:raspberrypi += 'rpi-u-boot-scr'
-PNWHITELIST:wr-bcm-2xxx-rpi += 'bcm2835-bootfiles'
-PNWHITELIST:raspberrypi += 'rpi-cmdline'
-PNWHITELIST:raspberrypi += 'rpi-config'
-PNWHITELIST:raspberrypi += 'rpi-bootfiles'
-PNWHITELIST:raspberrypi += 'pi-bluetooth'
-PNWHITELIST:raspberrypi += 'udev-rules-rpi'
+WRL_RECIPES:openembedded-layer += 'hostapd'
+WRL_RECIPES:networking-layer += 'crda'
+WRL_RECIPES:meta-python += 'python3-m2crypto'
+WRL_RECIPES:raspberrypi += 'rpi-u-boot-scr'
+WRL_RECIPES:wr-bcm-2xxx-rpi += 'bcm2835-bootfiles'
+WRL_RECIPES:raspberrypi += 'rpi-cmdline'
+WRL_RECIPES:raspberrypi += 'rpi-config'
+WRL_RECIPES:raspberrypi += 'rpi-bootfiles'
+WRL_RECIPES:raspberrypi += 'pi-bluetooth'
+WRL_RECIPES:raspberrypi += 'udev-rules-rpi'
 
 EXTRA_KERNEL_FILES =. "${LAYER_PATH_wr-bcm-2xxx-rpi}/templates/default/bcmgenet:"
 EXTRA_KERNEL_SRC_URI += "file://bcmgenet.cfg"
