--- a/conf/layer.conf
+++ b/conf/layer.conf
@@ -21,7 +21,7 @@ LAYERVERSION_wr-bcm-2xxx-rpi = "1"
 
 LAYERDEPENDS_wr-bcm-2xxx-rpi = "core wrlinux raspberrypi"
 
-LAYERSERIES_COMPAT_wr-bcm-2xxx-rpi = "wrl honister"
+LAYERSERIES_COMPAT_wr-bcm-2xxx-rpi = "wrl kirkstone"
 
 NON_MULTILIB_RECIPES:append = " u-boot rpi-bootfiles rpi-config rpi-cmdline"
 
