--- a/conf/layer.conf
+++ b/conf/layer.conf
@@ -29,6 +29,8 @@ LICENSE_PATH += "${LAYERDIR}/files/custom-licenses"
 
 LAYERRECOMMENDS_wr-bcm-2xxx-rpi  = "bcm-2xxx-rpi-dl"
 
+WRL_RECIPES:wr-bcm-2xxx-rpi += 'bcm2835-bootfiles'
+
 BBFILES_DYNAMIC += " \
     xfce-layer:${LAYERDIR}/dynamic-layers/meta-xfce/recipes-*/*/*.bbappend \
 "
