bcm-2xxx-rpi: update bsp conf files
Issue: LINUXEXEC-32781

LAYERSERIES_COMPAT modified for yocto scarthgap version.
linux-yocto PREFERRED_VERSION updated as v6.6.
BOOT_MEDIA macro added to fix autoboot issue.

Signed-off-by: Rajeshkumar Ramasamy <rajeshkumar.ramasamy@windriver.com>

--- a/conf/machine/bcm-2xxx-rpi4.conf
+++ b/conf/machine/bcm-2xxx-rpi4.conf
@@ -18,6 +18,7 @@ WIFI_KERNEL_PACKAGES ?= " \
 MACHINEOVERRIDES .= ":raspberrypi4"
 
 KERNEL_BOOTCMD ?= "booti"
+BOOT_MEDIA ?= "mmc"
 
 UBOOT_MACHINE = "rpi_arm64_config"
 
